# MetaForge.Django

./: .gitignore  Dockerfile  fastapi_app.py  requirements.txt
accounts/: admin.py  ai_helper.py  apps.py  helper.py  models.py  serializers.py  signal.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py  utils.py
rust_ai/: Cargo.toml
rust_ai/src/: lib.rs
socials/: admin.py  apps.py  helper.py  image_search.py  models.py  serializers.py  signals.py  urls.py  views.py  webhook.py
