[package]
name = "rust_ai"
version = "0.2.0"
edition = "2021"

[lib]
name = "rust_ai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"
